# hypermodern-python

./: .coverage  README.md  pyproject.toml
src/hypermodern_python/: wikipedia.py
src/hypermodern_python.egg-info/: PKG-INFO  requires.txt
tests/: conftest.py  test_console.py
