[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The Hypermodern Python Project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benignoc/hypermodern-python"
repository = "https://github.com/benignoc/hypermodern-python"
authors = ["Benigno Calvo <benigno.calvo@seveneighths.com>"]
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
